--- a/Tarea3/src/Sistema/tempĺates/Sistema/index.html
+++ b/Tarea3/src/Sistema/tempĺates/Sistema/index.html
@@ -4,8 +4,9 @@
 	<title>Login V16</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	{% load static %}	
 <!--===============================================================================================-->	
-	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
+	<link rel="icon" type="image/png" href="{% static "Sistema/images/icons/favicon.ico"%}"/>
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
 <!--===============================================================================================-->
